tests/baselines/reference/objectLiteralReferencingInternalProperties.errors.txt
==== tests/cases/compiler/objectLiteralReferencingInternalProperties.ts (1 errors) ====
    var a = { b: 10, c: b }; // Should give error for attempting to reference b.
                        ~
!!! objectLiteralReferencingInternalProperties.ts(1,21): error TS2095: Could not find symbol 'b'.